--- a/Proyecto (Festividades)/FestividadTableViewCell.xib
+++ b/Proyecto (Festividades)/FestividadTableViewCell.xib
@@ -17,48 +17,48 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4yU-uj-9O7">
-                        <rect key="frame" x="0.0" y="10" width="320" height="92"/>
+                        <rect key="frame" x="0.0" y="5" width="320" height="102"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="GjF-YL-Inx">
-                                <rect key="frame" x="10" y="5" width="300" height="82"/>
+                                <rect key="frame" x="10" y="5" width="300" height="92"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STi-Dr-UAh">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STi-Dr-UAh">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="27.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="G4f-sZ-7tc">
-                                        <rect key="frame" x="0.0" y="29" width="300" height="24"/>
+                                        <rect key="frame" x="0.0" y="32.5" width="300" height="27"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V0L-Y0-7IR">
-                                                <rect key="frame" x="0.0" y="0.0" width="150" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="27"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000 / 00 / 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28Y-7z-NGe">
-                                                <rect key="frame" x="150" y="0.0" width="150" height="24"/>
+                                                <rect key="frame" x="150" y="0.0" width="150" height="27"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="fecha"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Nqm-Qk-mIf">
-                                        <rect key="frame" x="0.0" y="58" width="300" height="24"/>
+                                        <rect key="frame" x="0.0" y="64.5" width="300" height="27.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Og-Ak-IEw">
-                                                <rect key="frame" x="0.0" y="0.0" width="150" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="27.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publico / Privado" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8j0-i6-zqv">
-                                                <rect key="frame" x="150" y="0.0" width="150" height="24"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Público / Privado" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8j0-i6-zqv">
+                                                <rect key="frame" x="150" y="0.0" width="150" height="27.5"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="tipo"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -78,8 +78,8 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="4yU-uj-9O7" secondAttribute="trailing" id="3GH-cm-y0B"/>
-                    <constraint firstItem="4yU-uj-9O7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="GcT-jb-9Yo"/>
-                    <constraint firstAttribute="bottom" secondItem="4yU-uj-9O7" secondAttribute="bottom" constant="10" id="TJd-nZ-d1o"/>
+                    <constraint firstItem="4yU-uj-9O7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="GcT-jb-9Yo"/>
+                    <constraint firstAttribute="bottom" secondItem="4yU-uj-9O7" secondAttribute="bottom" constant="5" id="TJd-nZ-d1o"/>
                     <constraint firstItem="4yU-uj-9O7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hMu-Yq-Jx4"/>
                 </constraints>
             </tableViewCellContentView>
