--- a/Proyecto (Festividades)/Base.lproj/Main.storyboard
+++ b/Proyecto (Festividades)/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="LcK-TY-gsM">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fireworks" translatesAutoresizingMaskIntoConstraints="NO" id="LcK-TY-gsM">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QOp-rj-CcY">
@@ -132,7 +132,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fireworks" translatesAutoresizingMaskIntoConstraints="NO" id="Tux-om-Y1J">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-a" translatesAutoresizingMaskIntoConstraints="NO" id="Tux-om-Y1J">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OqI-CS-mEB">
@@ -231,14 +231,25 @@
                     <view key="view" contentMode="scaleToFill" id="Prp-Oo-0kl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-b" translatesAutoresizingMaskIntoConstraints="NO" id="j1d-fT-NhZ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="8tH-Wa-Wrj"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="j1d-fT-NhZ" firstAttribute="leading" secondItem="8tH-Wa-Wrj" secondAttribute="leading" id="C46-LH-Ni0"/>
+                            <constraint firstItem="j1d-fT-NhZ" firstAttribute="top" secondItem="8tH-Wa-Wrj" secondAttribute="top" id="KWt-nr-uc7"/>
+                            <constraint firstItem="j1d-fT-NhZ" firstAttribute="trailing" secondItem="8tH-Wa-Wrj" secondAttribute="trailing" id="NE9-Hb-YEs"/>
+                            <constraint firstAttribute="bottom" secondItem="j1d-fT-NhZ" secondAttribute="bottom" id="T3c-FV-Qfd"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="D1s-XN-FCE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cir-xi-wRT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4329" y="69"/>
+            <point key="canvasLocation" x="4328.985507246377" y="68.973214285714278"/>
         </scene>
         <!--Cuenta-->
         <scene sceneID="Nf4-ag-Wny">
@@ -248,7 +259,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.94999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="config-bg-2" id="fJi-ty-2Jy">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-y" id="fJi-ty-2Jy">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="759"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -303,7 +314,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="c-bg" translatesAutoresizingMaskIntoConstraints="NO" id="oNg-cp-SyV">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-c" translatesAutoresizingMaskIntoConstraints="NO" id="oNg-cp-SyV">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="USM-d3-RPo">
@@ -436,11 +447,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bg" width="313" height="208.5"/>
-        <image name="c-bg" width="600" height="400"/>
+        <image name="bg-a" width="320" height="428"/>
+        <image name="bg-b" width="320" height="480"/>
+        <image name="bg-c" width="400" height="252.5"/>
+        <image name="bg-y" width="750.5" height="416"/>
         <image name="calendar" width="512" height="512"/>
         <image name="compass" width="512" height="512"/>
-        <image name="config-bg-2" width="600" height="330"/>
         <image name="fireworks" width="313" height="223.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -450,9 +462,6 @@
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
